PLATUI-4002: fix position of sign out link when no service name (#506)
* PLATUI-4002: fix position of sign out link when no service name

broken in 6.104.0

* PLATUI-4002: adjust sign out link position when rebrandedwith no service name to match gov.uk baseline

* PLATUI-4002: further adjustment to sign out link position without service name

needed to go down 1px more to match baseline of sign out link when service name is there

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -14,8 +14,28 @@ $govuk-header-link-underline-thickness: 3px;
     float: right;
     margin-bottom: 10px;
 
+    @include govuk-media-query($from: desktop) {
+      padding-top: 10px;
+
+      .govuk-template--rebranded & {
+        padding-top: 29px;
+      }
+    }
+
     .govuk-template--rebranded & {
       margin-bottom: 15px;
+    }
+  }
+
+  .govuk-header__navigation + .hmrc-sign-out-nav {
+    padding-top: 4px;
+
+    @include govuk-media-query($from: tablet) {
+      padding-top: 10px;
+    }
+
+    @include govuk-media-query($from: desktop) {
+      padding-top: 0;
     }
   }
 
@@ -181,18 +201,6 @@ $govuk-header-link-underline-thickness: 3px;
   .hmrc-sign-out-nav {
     flex-shrink: 0;
     margin-left: auto;
-  }
-}
-
-.hmrc-header:has(.govuk-header__navigation) .hmrc-sign-out-nav {
-  margin-top: 4px;
-
-  @include govuk-media-query($from: tablet) {
-    margin-top: 10px;
-  }
-
-  @include govuk-media-query($from: desktop) {
-    margin-top: 0;
   }
 }
 
